# MILP

go_cuts/: CMakeLists.txt  README.md
go_cuts/include/: ConshdlrGO.h  event_setobjlimit.h
go_cuts/mixed-integer/src/: ConshdlrGO.cpp
go_cuts/pure-integer/: CMakeLists.txt
go_cuts/pure-integer/include/: ConshdlrGO.h
go_cuts/pure-integer/src/: ConshdlrGO.cpp  event_setobjlimit.cpp  main_go.cpp
go_cuts/settings/: mir  pure-int  root_mir  root_pure
go_cuts/src/: event_setobjlimit.cpp  main_go.cpp
instances/: MIPLIB-cont  MIPLIB-cont_sol  MIPLIB-int  MIPLIB-int_sol
rcfc/: CMakeLists.txt  README.md
rcfc/include/: ConshdlrRCFC.h
rcfc/settings/: example1
rcfc/src/: ConshdlrRCFC.cpp  main_rcfc.cpp
